@@ -1,3 +1,10 @@
+2007-11-16 Eloy Duran <e.duran@superalloy.nl>
+
+	* lib/rucola/nib.rb,
+	  test/test_nib.rb:
+
+	Nib#add_class now takes an optional superclass.
+
 2007-11-15 Chris McGrath <chris@octopod.info>
 
 	* Manifest.txt,
